--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="lost_package_num">丢包个数</string>
     <string name="command_tip">请输入16进制数</string>
     <string name="command_instruction">命令说明</string>
-    <string name="command_detail">运动数据命令:0201
-       \n睡眠数据:0301
-        \n运动心率:0401
-        \n单次心率:0501
-        \n实时心率:F501</string>
+    <string name="command_detail">运动数据命令:0201 实际指令:0206B100020103B1
+       \n睡眠数据:0301 实际指令:0206B100030103B0
+        \n运动心率:0401 实际指令:0206B100040103B7
+        \n单次心率:0501 实际指令:0206B100050103B6
+        \n实时心率开始:F501 实际指令:0206B100F5010346
+    \n实时指令停止:F500 实际指令:0206B100F5000347
+    \n实时指令继续:F502 实际指令:0206B100F5020345</string>
 </resources>
