--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="command_tip">请输入16进制数</string>
     <string name="command_instruction">命令列表</string>
     <string name="clear_data">清空数据</string>
+    <string name="output_data_file">导出数据到文件</string>
     <string name="command_detail">运动数据命令:0201 实际指令:0206B100020103B1
        \n睡眠数据:0301 实际指令:0206B100030103B0
         \n运动心率:0401 实际指令:0206B100040103B7
